[package]
name = "termila"
version = "0.1.0"
edition = "2021"

[dependencies]
HUI = { path = "../HUI/rust" }
#HUI = { git = "https://github.com/mi4code/HUI" }
nix = "0.26"
libc = "0.2"
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_System_Environment",
  "Win32_System_Threading",
  "Win32_System_Pipes",
  "Win32_System_Console",
  "Win32_System_Memory",
  "Win32_System_SystemInformation",
  "Win32_System_Threading",
  "Win32_Security",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Storage_FileSystem",
  "Win32_System_IO",
  "Win32_System_SystemServices",
] }
